--- a/themes/volantis/_config.yml
+++ b/themes/volantis/_config.yml
@@ -300,7 +300,7 @@ widget:
     header:
       icon: fas fa-folder-open
       title: 文章分类
-      url: /blog/categories/
+      url: /categories/
   # ---------------------------------------
   # tagcloud widget
   tagcloud:
