--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 'Runo+ [露诺的小窝]'
-subtitle: 'Runo+'
-description: '是一只来自兽圈从事前端开发的鱼鱼!~ owo 请多多指教哦!'
-keywords: 'runo,runoMeow,露诺,喵露诺,runo+,runoPlus,兽圈,furry,鱼,粉红,红'
+title: 'RunoPlus [露诺的小窝]'
+subtitle: 'RunoPlus'
+description: '一只来自海底的四耳猫鱼龙兽!~ owo 请多多指教哦!'
+keywords: 'RunoPlus,露诺的小窝,露诺,Runo+,喵露诺,露洛,博客,兽圈,兽,Furry,Blog,Code'
 author: Runo Meow
 language:
 timezone: 'Asia/Shanghai'
