--- a/themes/volantis/_config.yml
+++ b/themes/volantis/_config.yml
@@ -91,9 +91,6 @@ style:
   #   codeblock: '#555' # Codeblock color
   #   p: '#ccc' # Paragraph color
 
-
-
-
 ############################### Layout ###############################
 cover:
   scheme: docs # docs, blog
@@ -124,7 +121,6 @@ cover:
     #   icon: fas fa-handshake
     #   url: https://volantis.js.org/contributors/
 
-
 # Navigation Bar
 navbar:
   logo: # choose [img] or [icon + title]
@@ -151,9 +147,7 @@ navbar:
     # - name: 关于
     #   icon: fas fa-info-circle
     #   url: about/
-  search: 搜索...   # Search bar placeholder
-
-
+  search: 搜索... # Search bar placeholder
 
 layout:
   # The following can be written in `blog/source/_data/layout.yml`
@@ -182,7 +176,6 @@ layout:
     # 文章页脚，自动在每一篇文章末尾添加
     article_footer: [references, related_repos, copyright, donate]
   # 其他的页面布局暂时等于 on_list
-
 
 # meta library
 meta:
@@ -278,7 +271,7 @@ widget:
     shape: rectangle # circle, rectangle
     url: /
     title: 'Runo'
-    subtitle: '一只红色的四耳猫鱼龙兽 owo'
+    subtitle: '一只来自海底的四耳猫鱼龙兽!'
     jinrishici: false # Poetry Today. You can set a string, and it will be displayed when loading fails.
     social: true
   # ---------------------------------------
@@ -339,7 +332,7 @@ widget:
   donate:
     class: qrcode
     display: [desktop, mobile] # [desktop, mobile]
-    height: 64px  # Automatic height if not set
+    height: 64px # Automatic height if not set
     fancybox: true
     images:
       # - https://cdn.jsdelivr.net/gh/xaoxuu/cdn-assets/qrcode/wiki_volantis.png
@@ -362,8 +355,6 @@ widget:
   # You can add your own widget here or 'blog/source/_data/widget.yml'
   # class: text, list, grid, qrcode, page, ... see more at https://volantis.js.org/
 
-
-
 footer:
   # layout of footer: [aplayer, social, license, info, copyright]
   layout: [aplayer, social, license, info, copyright]
@@ -380,7 +371,6 @@ footer:
   # You can add your own property here. (Support markdown, for example: br: '<br>')
   br: '<br>'
 
-
 ############################### SEO ###############################
 seo:
   # When there are no keywords in the article's front-matter, use tags as keywords.
@@ -394,7 +384,6 @@ seo:
     category: noindex,follow
     tag: noindex,follow
     # robots can be written in front-matter
-
 
 ############################### Plugins ###############################
 plugins:
@@ -440,11 +429,11 @@ plugins:
   backstretch:
     enable: true
     js: https://cdn.jsdelivr.net/npm/jquery-backstretch@2.1.18/jquery.backstretch.min.js
-    position: top       # cover: sticky on the cover.   fixed: Fixed as background for the site.
-    shuffle: true         # shuffle playlist
-    duration: 20000       # Duration (ms)
-    fade: 1500            # fade duration (ms) (Not more than 1500)
-    images:               # For personal use only. At your own risk if used for commercial purposes !!!
+    position: top # cover: sticky on the cover.   fixed: Fixed as background for the site.
+    shuffle: true # shuffle playlist
+    duration: 20000 # Duration (ms)
+    fade: 1500 # fade duration (ms) (Not more than 1500)
+    images: # For personal use only. At your own risk if used for commercial purposes !!!
       - https://runo-1257831670.cos.ap-chongqing.myqcloud.com/blog_bg.jpg
       # - https://cdn.jsdelivr.net/gh/xaoxuu/cdn-wallpaper/abstract/BBC19066-E176-47C2-9D22-48C81EE5DF6B.jpeg
       # - https://cdn.jsdelivr.net/gh/xaoxuu/cdn-wallpaper/abstract/B18FCBB3-67FD-48CC-B4F3-457BA145F17A.jpeg
@@ -466,22 +455,22 @@ plugins:
       - https://cdn.jsdelivr.net/npm/aplayer@1.10/dist/APlayer.min.js
       - https://cdn.jsdelivr.net/npm/meting@2.0/dist/Meting.min.js
     # Required
-    server: netease   # netease, tencent, kugou, xiami, baidu
-    type: playlist    # song, playlist, album, search, artist
-    id: 3175833810    # song id / playlist id / album id / search keyword
+    server: netease # netease, tencent, kugou, xiami, baidu
+    type: playlist # song, playlist, album, search, artist
+    id: 3175833810 # song id / playlist id / album id / search keyword
     # Optional
-    fixed: false      # enable fixed mode
-    theme: '#1BCDFC'  # main color
-    autoplay: false   # audio autoplay
-    order: list       # player play order, values: 'list', 'random'
-    loop: all         # player loop play, values: 'all', 'one', 'none'
-    volume: 0.7       # default volume, notice that player will remember user setting, default volume will not work after user set volume themselves
+    fixed: false # enable fixed mode
+    theme: '#1BCDFC' # main color
+    autoplay: false # audio autoplay
+    order: list # player play order, values: 'list', 'random'
+    loop: all # player loop play, values: 'all', 'one', 'none'
+    volume: 0.7 # default volume, notice that player will remember user setting, default volume will not work after user set volume themselves
     list_max_height: 340px # list max height
     list_folded: true
   pjax:
     enable: true
-    timeout: 5000        # The timeout in milliseconds for the XHR requests. Set to 0 to disable the timeout.
-    cacheBust: false     # When set to true, Pjax appends a timestamp  to skip the browser cache.
+    timeout: 5000 # The timeout in milliseconds for the XHR requests. Set to 0 to disable the timeout.
+    cacheBust: false # When set to true, Pjax appends a timestamp  to skip the browser cache.
     animation: nprogress # nprogress, circle
     banUrl:              # 被屏蔽的 url 地址将不启用 pjax 跳转，可以在控制台下使用 window.location.pathname 获取
       # - '/about/index.html'
@@ -504,9 +493,6 @@ plugins:
     # color2: #说说背景颜色2&按钮颜色2
     # color3: #说说字体颜色
 
-
-
-
 ############################### Comments ###############################
 comments:
   title: <i class='fas fa-comments'></i> 评论
@@ -520,7 +506,7 @@ comments:
     # js: https://cdn.jsdelivr.net/npm/valine@1.4/dist/Valine.min.js
     path: # All pages use the same path (share the same comments data)
     meta: nick,mail,link # valine comment header info
-    requiredFields: ['nick','mail']
+    requiredFields: ['nick', 'mail']
     enableQQ: true # Unstable avatar link
     placeholder: 快来评论吧~ # valine comment input placeholder(like: Please leave your footprints )
     avatar: robohash # gravatar style https://valine.js.org/avatar
@@ -604,14 +590,12 @@ comments:
   hashover:
     src: https://example.com/(path/)comments.php
 
-
-
 ############################### Search ###############################
 # To use hexo search, you need to install the following plugins:
 # npm i -S hexo-generator-search hexo-generator-json-content
 search:
   enable: true
-  service: hexo  # hexo, google, algolia, azure, baidu
+  service: hexo # hexo, google, algolia, azure, baidu
   # js: https://cdn.jsdelivr.net/gh/xaoxuu/cdn-volantis@3.0/js/search.js
   google:
     apiKey:
@@ -626,8 +610,6 @@ search:
     queryKey:
   baidu:
     apiId:
-
-
 
 ############################### Theme Information ###############################
 info:
