--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "docenv": "^1.0.0",
+    "express": "^4.17.1",
     "hexo": "^4.2.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
