--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "node-cmd": "^3.0.0"
   }
 }
