--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "docenv": "^1.0.0",
     "express": "^4.17.1",
     "hexo": "^4.2.1",
