增加网站地图功能

--- a/_config.yml
+++ b/_config.yml
@@ -112,3 +112,9 @@ offline:
     - public/**/*.{js,html,css,png,jpg,gif,svg,eot,ttf,woff,woff2}
   stripPrefix: public
   verbose: true
+
+# sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
