--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-wordcount": "^6.0.1",
     "node-cmd": "^3.0.0"
   }
 }
