--- a/themes/volantis/_config.yml
+++ b/themes/volantis/_config.yml
@@ -414,7 +414,7 @@ plugins:
   busuanzi: https://cdn.jsdelivr.net/gh/xaoxuu/cdn-busuanzi@2.3/js/busuanzi.pure.mini.js
 
   # npm i --save hexo-wordcount
-  wordcount: #true
+  wordcount: true
 
   ######## Plugins for ...
   # Button Ripple Effect
@@ -450,21 +450,21 @@ plugins:
   # APlayer is only available in mainland China.
   # APlayer config: https://github.com/metowolf/MetingJS
   aplayer:
-    enable: false
+    enable: true
     js:
       - https://cdn.jsdelivr.net/npm/aplayer@1.10/dist/APlayer.min.js
       - https://cdn.jsdelivr.net/npm/meting@2.0/dist/Meting.min.js
     # Required
     server: netease # netease, tencent, kugou, xiami, baidu
     type: playlist # song, playlist, album, search, artist
-    id: 3175833810 # song id / playlist id / album id / search keyword
+    id: 5136328037 # song id / playlist id / album id / search keyword
     # Optional
-    fixed: false # enable fixed mode
-    theme: '#1BCDFC' # main color
+    fixed: true # enable fixed mode
+    theme: '#ff7bac' # main color
     autoplay: false # audio autoplay
-    order: list # player play order, values: 'list', 'random'
+    order: random # player play order, values: 'list', 'random'
     loop: all # player loop play, values: 'all', 'one', 'none'
-    volume: 0.7 # default volume, notice that player will remember user setting, default volume will not work after user set volume themselves
+    volume: 1 # default volume, notice that player will remember user setting, default volume will not work after user set volume themselves
     list_max_height: 340px # list max height
     list_folded: true
   pjax:
@@ -496,7 +496,7 @@ plugins:
 ############################### Comments ###############################
 comments:
   title: <i class='fas fa-comments'></i> 评论
-  subtitle:
+  subtitle: '在昵称输入QQ号码可以获取到QQ头像和昵称哦~'
   service: valine # valine, minivaline, disqus, gitalk, vssue, livere, isso, hashover
   # Valine
   # https://valine.js.org/
@@ -505,7 +505,7 @@ comments:
     appKey: YJwjlIENrdSVsm6fHxe2Jrod # your appKey
     # js: https://cdn.jsdelivr.net/npm/valine@1.4/dist/Valine.min.js
     path: # All pages use the same path (share the same comments data)
-    meta: nick,mail,link # valine comment header info
+    meta: nick,mail # valine comment header info
     requiredFields: ['nick', 'mail']
     enableQQ: true # Unstable avatar link
     placeholder: 快来评论吧~ # valine comment input placeholder(like: Please leave your footprints )
