--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: 'RunoPlus [露诺的小窝]'
 subtitle: 'RunoPlus'
-description: '一只来自海底的四耳猫鱼龙兽!~ owo 请多多指教哦!'
+description: '一只来自深海的四耳猫鱼龙兽!~ owo 请多多指教哦!'
 keywords: 'RunoPlus,露诺的小窝,露诺,Runo+,喵露诺,露洛,博客,兽圈,兽,Furry,Blog,Code'
-author: Runo Meow
+author: Runo
 language:
 timezone: 'Asia/Shanghai'
 
