--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 'RunoPlus [露诺的小窝]'
-subtitle: 'RunoPlus'
+title: 'Runo+ [露诺的小窝]'
+subtitle: 'Runo+'
 description: '一只来自深海的四耳猫鱼龙兽!~ owo 请多多指教哦!'
-keywords: 'RunoPlus, Runo Plus,露诺的小窝,露诺,Runo+,喵露诺,露洛,博客,兽圈,兽,Furry,Blog,Code'
+keywords: 'Runo+,Runo,露诺的小窝,露诺,RunoPlus,喵露诺,露洛,露诺窝,博客,兽圈,兽,Furry,Blog,Code'
 author: Runo
 language:
 timezone: 'Asia/Shanghai'
